--- a/src/styles/globals/reset.css
+++ b/src/styles/globals/reset.css
@@ -8,6 +8,11 @@
   box-sizing: border-box;
 }
 
+body,
+html {
+  overflow-x: hidden;
+}
+
 code,
 kbd,
 samp,
